@@ -35,7 +35,7 @@ theme_override_font_sizes/font_size = 32
 text = "Drag Cards to Mulligan"
 
 [node name="Drop" type="Control" parent="MarginContainer/VBoxContainer"]
-custom_minimum_size = Vector2(900, 300)
+custom_minimum_size = Vector2(900, 220)
 layout_mode = 2
 
 [node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/Drop"]
@@ -50,7 +50,6 @@ mouse_filter = 2
 [node name="SelectedCards" parent="MarginContainer/VBoxContainer/Drop/CenterContainer" instance=ExtResource("3_g0jyd")]
 unique_name_in_owner = true
 layout_mode = 2
-Shrinks = true
 
 [node name="DropArea" type="Control" parent="MarginContainer/VBoxContainer/Drop"]
 unique_name_in_owner = true
